--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
               </div>
             </a>
           </div>
+          <div class="student-card" id="sherry-martin-card">
+            <a href="students/sherry-martin.html">
+              <div class="view-profile-div">
+                <h3 class="view-profile-text">View Profile</h3>
+              </div>
+              <div class="card-text-container">
+                <h4 class="student-name">Sherry Martin</h4>
+                <p class="student-location">Charlottesville, VA</p>
+              </div>
+            </a>
+          </div>
           <div class="student-card" id="diane-vu-card">
             <a href="students/diane-vu.html">
               <div class="view-profile-div">
