--- a/students/sherry-martin.html
+++ b/students/sherry-martin.html
@@ -35,7 +35,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I live in Charlotesville, VA and I am a former Hydrologist turned Full Stack Software Engineer.</p>
+              <p>I grew up in the coastal area of NJ and attended a marine science high school. I graduated from Cornell University and SUNY-ESF for my undergraduate and graduate degrees. I live in Charlotesville, VA and I am a former Hydrologist turned Full Stack Software Engineer.</p>
             </div>
           </div>
         </div>
