--- a/students/sherry-martin.html
+++ b/students/sherry-martin.html
@@ -25,7 +25,7 @@
         <div class="vitals-text-container">
           <h1 class="profile-name">Sherry Martin</h1>
           <h2 class="profile-location">Charlottesville, VA</h2>
-          <div class="profile-quote">Full Stack Development Student at FLatiron School</div>
+          <div class="profile-quote">Full Stack Development Student at Flatiron School</div>
         </div>
       </div>
       <div class="details-container">
